--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Curved Images</title>
+  <title>AR's VR</title>
   <script src="//aframe.io/releases/0.5.0/aframe.min.js"></script>
   <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.3.1/dist/aframe-extras.min.js"></script>
 </head>
@@ -13,7 +13,7 @@
   <a-scene>
     <a-assets>
       <img id="image1" src="local-weather-min.png" />
-      <img id="image2" src="quote-machine-min.png" />
+      <img id="image2" srcß="quote-machine-min.png" />
       <img id="image3" src="wikipedia-viewer-min.png" />
       <img id="image4" src="todo-min.png" />
     </a-assets>
