Fixed typo in image link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a-scene>
     <a-assets>
       <img id="image1" src="local-weather-min.png" />
-      <img id="image2" srcß="quote-machine-min.png" />
+      <img id="image2" src="quote-machine-min.png" />
       <img id="image3" src="wikipedia-viewer-min.png" />
       <img id="image4" src="todo-min.png" />
     </a-assets>
